services/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      protocol: TCP
    - name: https-internal
      port: 8201
      targetPort: 8201
      protocol: TCP
  selector:
    app: vault
